--- a/src/app/checkout/template/checkout-review.component.html
+++ b/src/app/checkout/template/checkout-review.component.html
@@ -9,12 +9,12 @@
       <th></th>
     </tr>
     </thead>
-    <tbody>
+    <tbody *ngIf="model&&model.items">
     <tr *ngFor="let item of model.items">
       <td>
         <div class="product-item">
           <a class="product-thumb" [routerLink]="['/product', item.productId]">
-            <img src="./assets/img/product_images/{{item.image}}" alt="{{item.name}}">
+            <img src="{{productImageFolder+item.image}}" alt="{{item.name}}">
           </a>
           <div class="product-info">
             <h4 class="product-title">
