--- a/src/app/checkout/template/checkout-order-summary.component.html
+++ b/src/app/checkout/template/checkout-order-summary.component.html
@@ -1,15 +1,15 @@
 <section class="widget widget-order-summary" *ngIf="order">
   <h3 class="widget-title">Order Summary</h3>
   <table class="table">
-    <tr *ngIf="order.totalAmount">
+    <tr *ngIf="order.subtotal">
       <td>Cart Subtotal:</td>
-      <td class="text-medium">{{order.totalAmount | number: '1.2'}}</td>
+      <td class="text-medium">{{order.subtotal | number: '1.2'}}</td>
     </tr>
     <tr *ngIf="shipping&&order.shippingCost">
       <td>Shipping:</td>
       <td class="text-medium">{{order.shippingCost || 0 | number: '1.2'}}</td>
     </tr>
-    <tr *ngIf="order.estimatedTax ">
+    <tr *ngIf="order.estimatedTax">
       <td>Estimated tax:</td>
       <td class="text-medium">{{order.estimatedTax | number: '1.2'}}</td>
     </tr>
